[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdal_rasterstats"
version = "0.6.0"
description = "Zonal statistics extraction based on GDAL"
requires-python = ">=3.10"
authors = [
  { name="Paul Connetable", email="paco@dhigroup.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "numpy", 
  "pandas", 
  "tqdm",
  "gdal",
  "pyarrow",
  "libgdal-arrow-parquet"
]

[tool.setuptools]
packages = ["gdal_rasterstats"]
